# minecraft-server-builder

./: .dockerignore  LICENSE  README.md  docker-compose.yml  dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
backend/: Cargo.toml
backend/src/: api.rs  docker.rs  main.rs
backend/src/api/: error_handling.rs
backend/src/api/controllers/: containers.rs
backend/src/api/routes/: containers.rs
backend/src/api/services/: containers.rs
backend/src/docker/: connection.rs  container.rs  platform.rs
src/: index.css  main.tsx
src/api/: mcjars.ts  modrinth.ts  wikiParse.ts
src/constants/: API.ts  gamemodeOptions.ts  mcMeta.ts  quickSettings.ts  server.properties.ts
src/features/App/: BuildButton.tsx  FilterSidebar.tsx  LoaderBar.tsx  SearchBar.tsx  index.ts
src/hooks/: useDraggable.ts  useUrlState.ts
src/i18n/: en.ts  es.ts  i18n.ts  ja.ts  pt.ts  zh.ts
src/pages/: App.tsx
src/stores/: useServerConfiguration.ts  useSnackbar.ts  useStore.ts
src/tools/: buildHelpers.ts  compressAndDownload.ts  extractMrpackIndex.ts  fileDownloader.ts  gameRuleDatapack.ts  versionHelpers.ts
src/types/: index.ts  utils.ts
src/types/mrpack/: types.ts
src/types/project/: builds.ts  loader.ts  types.ts  version.ts
src/types/server/: gamerule.ts  types.ts
src/types/version/: types.ts
src/ui/: GlassCard.tsx  Header.tsx  LanguageSwitcher.tsx  Loading.tsx  Page.tsx  SnackbarContainer.tsx  ThemeSwitcher.tsx  index.ts
src/ui/components/: ButtonGroup.tsx  CheckboxList.tsx  Entry.tsx  index.ts  (+9 more)
(+27 files in other folders)
